@@ -51,9 +51,9 @@
 
 static char const rcsid[] = "$Id$";
 
-static	RETSIGTYPE	(*oldsigquit)();	/* old value of quit signal */
-static	RETSIGTYPE	(*oldsighup)();		/* old value of hangup signal */
-static	RETSIGTYPE	(*oldsigstp)();
+static	RETSIGTYPE	(*oldsigquit)(int); /* old value of quit signal */
+static	RETSIGTYPE	(*oldsighup)(int); /* old value of hangup signal */
+static	RETSIGTYPE	(*oldsigstp)(int); /* old value of SIGTSTP */
 
 #ifndef __MSDOS__ /* none of these is needed, there */
 static	int	join(pid_t p);
